k8s-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: freelang-bank
  labels:
    name: freelang-bank
    environment: production
